--- a/oem_application/gui.ui
+++ b/oem_application/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1235</width>
-    <height>842</height>
+    <width>1059</width>
+    <height>819</height>
    </rect>
   </property>
   <property name="palette">
@@ -466,7 +466,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>1211</width>
+      <width>1031</width>
       <height>41</height>
      </rect>
     </property>
@@ -488,8 +488,8 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>170</y>
-      <width>121</width>
+      <y>130</y>
+      <width>131</width>
       <height>21</height>
      </rect>
     </property>
@@ -499,14 +499,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Package version</string>
+     <string>Package version:</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="urgency">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>160</y>
+      <x>330</x>
+      <y>120</y>
       <width>141</width>
       <height>41</height>
      </rect>
@@ -519,7 +519,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>300</y>
+      <y>280</y>
       <width>141</width>
       <height>41</height>
      </rect>
@@ -532,8 +532,8 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>300</y>
-      <width>481</width>
+      <y>280</y>
+      <width>351</width>
       <height>41</height>
      </rect>
     </property>
@@ -543,58 +543,14 @@
      </font>
     </property>
     <property name="text">
-     <string>path</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="version">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>160</y>
-      <width>71</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>100</number>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="geometry">
-     <rect>
-      <x>690</x>
-      <y>300</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Image CRC</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="image_crc_1">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>300</y>
-      <width>421</width>
-      <height>41</height>
-     </rect>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>360</y>
+      <y>340</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -612,7 +568,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>350</y>
+      <y>330</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -627,30 +583,12 @@
      <number>1</number>
     </property>
    </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>360</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Version</string>
-    </property>
-   </widget>
    <widget class="QComboBox" name="image_target_1">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>350</y>
-      <width>421</width>
+      <x>410</x>
+      <y>330</y>
+      <width>141</width>
       <height>41</height>
      </rect>
     </property>
@@ -673,8 +611,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>360</y>
+      <x>340</x>
+      <y>340</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -688,21 +626,11 @@
      <string>Target</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="image_crc_2">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>450</y>
-      <width>421</width>
-      <height>41</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>510</y>
+      <y>470</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -719,9 +647,9 @@
    <widget class="QComboBox" name="image_target_2">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>500</y>
-      <width>421</width>
+      <x>410</x>
+      <y>460</y>
+      <width>141</width>
       <height>41</height>
      </rect>
     </property>
@@ -744,9 +672,9 @@
    <widget class="QLabel" name="image_path_2">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>450</y>
-      <width>471</width>
+      <x>200</x>
+      <y>410</y>
+      <width>351</width>
       <height>41</height>
      </rect>
     </property>
@@ -756,14 +684,14 @@
      </font>
     </property>
     <property name="text">
-     <string>path</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>510</y>
+      <x>340</x>
+      <y>470</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -781,7 +709,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>500</y>
+      <y>460</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -796,29 +724,11 @@
      <number>1</number>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>690</x>
-      <y>450</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Image CRC</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="image_file_2">
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>450</y>
+      <y>410</y>
       <width>141</width>
       <height>41</height>
      </rect>
@@ -827,39 +737,11 @@
      <string>Upload image 2</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_11">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>510</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Version</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="image_crc_3">
-    <property name="geometry">
-     <rect>
-      <x>780</x>
-      <y>600</y>
-      <width>421</width>
-      <height>41</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>660</y>
+      <x>340</x>
+      <y>600</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -873,47 +755,11 @@
      <string>Target</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_5">
-    <property name="geometry">
-     <rect>
-      <x>690</x>
-      <y>600</y>
-      <width>91</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Image CRC</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_13">
-    <property name="geometry">
-     <rect>
-      <x>410</x>
-      <y>660</y>
-      <width>61</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Version</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="image_file_3">
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>600</y>
+      <y>540</y>
       <width>141</width>
       <height>41</height>
      </rect>
@@ -926,7 +772,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>660</y>
+      <y>600</y>
       <width>91</width>
       <height>21</height>
      </rect>
@@ -943,9 +789,9 @@
    <widget class="QComboBox" name="image_target_3">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>650</y>
-      <width>421</width>
+      <x>410</x>
+      <y>590</y>
+      <width>141</width>
       <height>41</height>
      </rect>
     </property>
@@ -969,7 +815,7 @@
     <property name="geometry">
      <rect>
       <x>200</x>
-      <y>650</y>
+      <y>590</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -987,9 +833,9 @@
    <widget class="QLabel" name="image_path_3">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>600</y>
-      <width>471</width>
+      <x>200</x>
+      <y>540</y>
+      <width>351</width>
       <height>41</height>
      </rect>
     </property>
@@ -999,71 +845,14 @@
      </font>
     </property>
     <property name="text">
-     <string>path</string>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="image_version_1">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>350</y>
-      <width>71</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>1000000000</number>
-    </property>
-    <property name="value">
-     <number>1</number>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="image_version_2">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>500</y>
-      <width>71</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>2</number>
-    </property>
-    <property name="value">
-     <number>1</number>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="image_version_3">
-    <property name="geometry">
-     <rect>
-      <x>480</x>
-      <y>650</y>
-      <width>71</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="minimum">
-     <number>1</number>
-    </property>
-    <property name="maximum">
-     <number>2</number>
-    </property>
-    <property name="value">
-     <number>1</number>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>170</y>
+      <x>540</x>
+      <y>130</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -1074,14 +863,14 @@
      </font>
     </property>
     <property name="text">
-     <string>#Images</string>
+     <string>#Images:</string>
     </property>
    </widget>
    <widget class="QSpinBox" name="n_images">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>160</y>
+      <x>630</x>
+      <y>120</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -1096,42 +885,45 @@
      <number>3</number>
     </property>
    </widget>
-   <widget class="QPushButton" name="go">
+   <widget class="QPushButton" name="upload">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>750</y>
-      <width>111</width>
+      <x>680</x>
+      <y>420</y>
+      <width>171</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Go!</string>
+     <string>Upload to Firebase</string>
     </property>
    </widget>
    <widget class="QLabel" name="error_msg">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>690</y>
-      <width>1041</width>
-      <height>50</height>
+      <x>20</x>
+      <y>680</y>
+      <width>1021</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>100</y>
+      <y>60</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -1151,7 +943,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>240</y>
+      <y>220</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -1167,13 +959,93 @@
      <string>Images info</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="version">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>120</y>
+      <width>81</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="inputMask">
+     <string>0.0.0</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="server_password">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>290</y>
+      <width>181</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="frame">
+     <bool>true</bool>
+    </property>
+    <property name="echoMode">
+     <enum>QLineEdit::Password</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>290</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Server Password:</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="sgin">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>360</y>
+      <width>171</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Signing Request</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_17">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>220</y>
+      <width>291</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Server connections</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1235</width>
+     <width>1059</width>
      <height>29</height>
     </rect>
    </property>
